testdata/baselines/reference/submodule/compiler/tsxInvokeComponentType.errors.txt
tsxInvokeComponentType.tsx(2,38): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== tsxInvokeComponentType.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    import React, { ComponentType } from "react";
                                         ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    declare const Elem: ComponentType<{ someKey: string }>;
    
    const bad = <Elem />;
    
    const good = <Elem someKey="ok" />;
    
    declare const Elem2: ComponentType<{ opt?: number }>;
    const alsoOk = <Elem2>text</Elem2>;
    